@@ -1,10 +1,12 @@
 [startup]
 ; set to 0: disable motion compensation globally 
 enabled = 1
-; set to 0: disable motion cotroller / vive tracker override
+; set to 0: disable motion controller / vive tracker
 physical_enabled = 1
 ; set to 0: disable initialization of graphical overlay
 overlay_enabled = 1
+; set to 1 to initialize physical tracker asap (e.g. to enable oxrtk eye tracking in games without support for motion copntrollers)
+physical_early_init = 0 
 
 [tracker]
 ; supported modes: controller, yaw, srs and flypt 
